syntax = "proto3";

import "google/protobuf/empty.proto";



package api.engine.v1;

option go_package = "galileo/api/engine/v1;v1";
option java_multiple_files = true;
option java_package = "api.engine.v1";

service Engine {
  rpc TestEngine (google.protobuf.Empty) returns (TestEngineReply) {};
  rpc RunJob(RunJobRequest) returns (RunJobReply) {}
  rpc CancelJob(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc PauseJob(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc ResumeJob(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc DeleteJob(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc CronJob(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc BuildContainer(google.protobuf.Empty) returns (BuildContainerReply){}
}

message TestEngineReply {
  string hello = 1;
}

message BuildContainerReply {
  string id = 1;
  string name = 2;
  string image = 3;
}

message RunJobRequest {
  int64 taskId = 1;
  string worker = 2;
  string conf = 3;
}

message RunJobReply {
  bool success = 1;
}

